--- a/MH Database/MH Database/Ressources/Pictures/Rarities/Weapons.resx
+++ b/MH Database/MH Database/Ressources/Pictures/Rarities/Weapons.resx
@@ -118,40 +118,64 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="France" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\flags\france.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="GS_R1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\rarities\great sword\great_sword_rarity_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Great Sword\great_sword_rarity_11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="GS_R2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\rarities\great sword\great_sword_rarity_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Great Sword\great_sword_rarity_21.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="GS_R3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\rarities\great sword\great_sword_rarity_3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Great Sword\great_sword_rarity_31.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="GS_R4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\rarities\great sword\great_sword_rarity_4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Great Sword\great_sword_rarity_41.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="GS_R5" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\rarities\great sword\great_sword_rarity_5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Great Sword\great_sword_rarity_51.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="GS_R6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\rarities\great sword\great_sword_rarity_6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Great Sword\great_sword_rarity_61.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="GS_R7" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\rarities\great sword\great_sword_rarity_7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Great Sword\great_sword_rarity_71.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="GS_R8" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\rarities\great sword\great_sword_rarity_8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Great Sword\great_sword_rarity_81.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="GS_R9" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\rarities\great sword\great_sword_rarity_9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Great Sword\great_sword_rarity_91.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="GS_RX" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\rarities\great sword\great_sword_rarity_x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>Great Sword\great_sword_rarity_x1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="US" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ressources\pictures\flags\us.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="LS_R1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>long sword\long_sword_rarity_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LS_R2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>long sword\long_sword_rarity_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LS_R3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>long sword\long_sword_rarity_3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LS_R4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>long sword\long_sword_rarity_4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LS_R5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>long sword\long_sword_rarity_5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LS_R6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>long sword\long_sword_rarity_6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LS_R7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>long sword\long_sword_rarity_7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LS_R8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>long sword\long_sword_rarity_8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LS_R9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>long sword\long_sword_rarity_9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="LS_RX" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>long sword\long_sword_rarity_x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
