--- a/MH Database/MH Database/Ressources/Pictures/Rarities/Weapons.resx
+++ b/MH Database/MH Database/Ressources/Pictures/Rarities/Weapons.resx
@@ -208,6 +208,36 @@
   <data name="Hammer_RX" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>hammer\hammer_rarity_x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="HH_R1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>hunting horn\hunting_horn_rarity_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HH_R2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>hunting horn\hunting_horn_rarity_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HH_R3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>hunting horn\hunting_horn_rarity_3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HH_R4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>hunting horn\hunting_horn_rarity_4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HH_R5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>hunting horn\hunting_horn_rarity_5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HH_R6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>hunting horn\hunting_horn_rarity_6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HH_R7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>hunting horn\hunting_horn_rarity_7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HH_R8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>hunting horn\hunting_horn_rarity_8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HH_R9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>hunting horn\hunting_horn_rarity_9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HH_RX" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>hunting horn\hunting_horn_rarity_x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="LS_R1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>long sword\long_sword_rarity_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
