--- a/MH Database/MH Database/Ressources/Pictures/Rarities/Gen3-4/Weapons.resx
+++ b/MH Database/MH Database/Ressources/Pictures/Rarities/Gen3-4/Weapons.resx
@@ -388,6 +388,12 @@
   <data name="Insect_Glaive_Rarity_X" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>insect glaive\insect_glaive_rarity_x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Kinsect_Blunt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>kinsect\kinsect_blunt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Kinsect_Cutting" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>kinsect\kinsect_cutting.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Lance_Rarity_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>lance\lance_rarity_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
