--- a/MH Database/MH Database/Ressources/Pictures/Rarities/MHW/Weapons.resx
+++ b/MH Database/MH Database/Ressources/Pictures/Rarities/MHW/Weapons.resx
@@ -190,6 +190,9 @@
   <data name="rare_11_mhw_insect_glaive_wiki" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>insect glaive\rare-11-mhw-insect-glaive-wiki.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="rare_11_mhw_kinsect_wiki" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>kinsect\rare-11-mhw-kinsect-wiki.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="rare_11_mhw_lance_wiki" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>lance\rare-11-mhw-lance-wiki.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
