--- a/MH Database/MH Database/Properties/Resources.resx
+++ b/MH Database/MH Database/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="France" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ressources\pictures\flags\france.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Icône" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ressources\pictures\icône.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="US" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ressources\pictures\flags\us.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
